[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apialerts"
description = "Python wrapper for the API Alerts service"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["API Alerts", "push", "notifications", "alert", "monitoring"]
authors = [{ name = "API Alerts" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://apialerts.com"
Documentation = "https://apialerts.com/docs/python"
Repository = "https://github.com/apialerts/apialerts-python"
"Issue tracker" = "https://github.com/apialerts/apialerts-python/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = ["apialerts"]
include-package-data = true